--- a/patient-service/src/main/resources/application.properties
+++ b/patient-service/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.application.name=patient-service
 #spring.jpa.hibernate.ddl-auto=update
 #spring.sql.init.mode=always
 
-server.port=4000
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
+spring.kafka.bootstrap-servers=kafka:9092
 
+
+server.port=4000
 logging.level.root=info
