--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -5,6 +5,15 @@ spring:
   cloud:
     gateway:
       routes:
+        ## http://localhost:4004/auth/login
+        ## API GATEWAY -> http://auth-service:4005/login
+        - id: auth-service-route
+          uri: http://auth-service:4005
+          predicates:
+            - Path= /auth/**
+          filters:
+            - StripPrefix=1
+
         ## REST CLIENT -> http://localhost:4004/api/patient
         ## API GATEWAY -> http://patient-service:4000/patients
         ## PATIENT SERVICE (SPRING BOOT APP) -> /patients -> Patients Array
@@ -14,6 +23,7 @@ spring:
             - Path=/api/patients/**
           filters:
             - StripPrefix=1
+            - JwtValidation
 
         - id: api-cods-patient-route
           uri: http://patient-service:4000
