--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
         ## REST CLIENT -> http://localhost:4004/api/patient
         ## API GATEWAY -> http://patient-service:4000/patients
         ## PATIENT SERVICE (SPRING BOOT APP) -> /patients -> Patients Array
+        ## Route for /api/docs/patients to patient-service /v3/api-docs
         - id: patient-service-route
           uri: http://patient-service:4000
           predicates:
@@ -31,3 +32,10 @@ spring:
             - Path=/api-docs/patients
           filters:
             - RewritePath=/api-docs/patients,/v3/api-docs
+
+        - id: api-docs-auth-route
+          uri: http://auth-service:4005
+          predicates:
+            - Path=/api-docs/auth
+          filters:
+            - RewritePath=/api-docs/auth,/v3/api-docs
